--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                     <li><a href="#inicio" onclick="seleccionar()">HOME</a></li>
                     <li><a href="#sobremi" onclick="seleccionar()">ABOUT ME</a></li>
                     <li><a href="#skills" onclick="seleccionar()">SKILLS</a></li>
-                    <li><a href="#curriculum" onclick="seleccionar()">CURRICULUM</a></li>
-                    <li><a href="#portfolio" onclick="seleccionar()">PORTFOLIO</a></li>
+                    <li><a href="#curriculum" onclick="seleccionar()">RESUME</a></li>
+                    <li><a href="#portfolio" onclick="seleccionar()">PROJECTS</a></li>
                     <li><a href="#contacto" onclick="seleccionar()">CONTACT</a></li>
                 </ul>
             </nav>
@@ -44,8 +44,6 @@
             <h1>Jirgort McCarthy</h1>
             <h2>Software Engineer</h2>
             <div class="redes">
-                <a href="https://www.facebook.com/jirgort.mccarthy"><i class="fa-brands fa-facebook-f"></i></a>
-                <a href="https://x.com/Jirgort?t=cqFtilDi4rSdtvcJHu8TrA&s=09"><i class="fa-brands fa-twitter"></i></a>
                 <a href="https://github.com/Jirgort"><i class="fa-brands fa-github"></i></a>
                 <a
                     href="https://www.linkedin.com/in/jirgort-mccarthy-36a2a674?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BBHakaMNJRDC%2FS9g7RHihnQ%3D%3D"><i
@@ -142,7 +140,7 @@
                         <span>Javascript</span>
                         <div class="barra-skill">
                             <div class="progreso">
-                                <span>75%</span>
+                                <span><img src="img/JS.jpg" alt=""></span>
                             </div>
                         </div>
                     </div>
@@ -150,7 +148,7 @@
                         <span>HTML & CSS</span>
                         <div class="barra-skill">
                             <div class="progreso">
-                                <span>80%</span>
+                                <span><img src="img/htmlcss.jpg" alt=""></span>
                             </div>
                         </div>
                     </div>
@@ -158,7 +156,7 @@
                         <span>REACT</span>
                         <div class="barra-skill">
                             <div class="progreso">
-                                <span>80%</span>
+                                <span><img src="img/react.png" alt=""></span>
                             </div>
                         </div>
                     </div>
@@ -166,7 +164,7 @@
                         <span>ANGULAR</span>
                         <div class="barra-skill">
                             <div class="progreso">
-                                <span>70%</span>
+                                <span><img src="img/angular.png" alt=""></span>
                             </div>
                         </div>
                     </div>
@@ -174,7 +172,7 @@
                         <span>ASP.NET</span>
                         <div class="barra-skill">
                             <div class="progreso">
-                                <span>70%</span>
+                                <span><img src="img/asp.png" alt=""></span>
                             </div>
                         </div>
                     </div>
@@ -186,7 +184,7 @@
                         <span>Communication</span>
                         <div class="barra-skill">
                             <div class="progreso">
-                                <span>80%</span>
+                                <span><img src="img/comunicacion.png" alt=""></span>
                             </div>
                         </div>
                     </div>
@@ -194,7 +192,7 @@
                         <span>Teamwork</span>
                         <div class="barra-skill">
                             <div class="progreso">
-                                <span>75%</span>
+                                <span><img src="img/teamWork.png" alt=""></span>
                             </div>
                         </div>
                     </div>
@@ -202,7 +200,7 @@
                         <span>Creativity</span>
                         <div class="barra-skill">
                             <div class="progreso">
-                                <span>99%</span>
+                                <span><img src="img/brain.png" alt=""></span>
                             </div>
                         </div>
                     </div>
@@ -210,7 +208,7 @@
                         <span>Dedication</span>
                         <div class="barra-skill">
                             <div class="progreso">
-                                <span>80%</span>
+                                <span><img src="img/dedication.png" alt=""></span>
                             </div>
                         </div>
                     </div>
@@ -218,7 +216,7 @@
                         <span>Proyect Management</span>
                         <div class="barra-skill">
                             <div class="progreso">
-                                <span>94%</span>
+                                <span><img src="img/proyect.png" alt=""></span>
                             </div>
                         </div>
                     </div>
@@ -230,7 +228,7 @@
     <!-- SECCION CURRICULUM -->
     <section id="curriculum" class="curriculum">
         <div class="contenido-seccion">
-            <h2>Curriculum</h2>
+            <h2>Resume</h2>
             <div class="fila">
                 <div class="col izquierda">
                     <h3>Education</h3>
@@ -305,7 +303,7 @@
     <!-- SECCION PORTFOLIO -->
     <section id="portfolio" class="portfolio">
         <div class="contenido-seccion">
-            <h2>PORTFOLIO</h2>
+            <h2>PROJECTS</h2>
             <div class="galeria">
                 <div class="proyecto">
                     <a href="https://cotizadormonedasjirgort.netlify.app/" target="_blank">
@@ -364,12 +362,12 @@
                 </div>
                 <!-- Mapa -->
                 <div class="col">
-                    <img src="img/ubi.png" alt="">
+                    <img src="img/ubica.png" alt="">
                     <div class="info">
                         <ul>
                             <li>
                                 <i class="fa-solid fa-location-dot"></i>
-                                Limon, Santa Eduviges
+                               San José, Costa Rica
                             </li>
                             <li>
                                 <i class="fa-solid fa-mobile-screen"></i>
