--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                     </div>
                     <div class="item izq">
                         <h4>Full Stack Developer</h4>
-                        <span class="casa">TEECOP</span>
+                        <span class="casa">TECOOP</span>
                         <span class="fecha">2022 - 2023</span>
                         <p>Developed and maintained web applications using
                             technologies such as React.js and Node.js, asp.NET.
