--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                     <div class="item izq">
                         <h4>Full Stack Developer</h4>
                         <span class="casa">TECOOP</span>
-                        <span class="fecha">2022 - 2023</span>
+                        <span class="fecha">2023</span>
                         <p>Developed and maintained web applications using
                             technologies such as React.js and Node.js, asp.NET.
                             Led the development of the user interface for web applications
