--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         </li>
                         <li>
                             <strong>Address</strong>
-                            Limon, Costa Rica
+                            Costa Rica
                         </li>
                         <li>
                             <strong>Position</strong>
